--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   path_provider: ^2.1.5
   path: ^1.9.0
   sqflite: ^2.4.1
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
